# spf-edit

./: .gitignore  Cargo.toml  DESIGN.md  FEATURES.md  spf-edit.trace
docs/features/: 01-screen-layout.md  02-cursor-navigation.md  03-scrolling.md  04-insert-overtype-mode.md  05-command-line.md  06-line-numbers.md  07-file-io.md  08-save-end-cancel.md  09-browse-view-mode.md  10-nulls-caps-preserve.md  11-line-cmd-insert-delete.md  12-line-cmd-copy-move.md  13-line-cmd-replicate.md  14-line-cmd-overlay-swap.md  15-line-cmd-shift.md  16-line-cmd-case.md  17-line-cmd-join-split.md  18-line-cmd-exclude.md  19-find.md  20-change.md  21-exclude-show-system.md  22-delete-command.md  23-locate.md  24-labels-tags-handles.md  25-bounds-cols-tabs.md  26-sort.md  27-align.md  28-split-join-commands.md  29-case-commands.md  30-clipboard.md  31-external-copy-create.md  32-syntax-highlighting.md  33-hex-mode.md  34-split-screen.md  35-profiles-config.md
pan2json/: Cargo.toml
pan2json/src/: categorizer.rs  emitter.rs  json_model.rs  main.rs  parser.rs
pan2json/src/sections/: attr.rs  body.rs  init.rs  mod.rs  model.rs  proc_section.rs
panel-model/: Cargo.toml
panel-model/src/: lib.rs
panel-runtime/: Cargo.toml
panel-runtime/src/: engine.rs  lib.rs  loader.rs  manager.rs  renderer.rs  vars.rs
panels/: manifest.json
panels/browse/: S2DBROW.json  S2DBROWV.json  S2SCBROW.json  SBROWPAN.json
panels/changelog/: S2CH18P2.json  S2CHNG00.json  S2CHNG01.json  S2CHNG02.json  S2CHNG03.json  S2CHNG04.json  S2CHNG05.json  S2CHNG06.json  S2CHNG07.json  (+15 more)
spf/: Cargo.toml
spf/src/: main.rs
src/: buffer.rs  command.rs  editor.rs  file_io.rs  input.rs  line.rs  line_cmd.rs  line_store.rs  main.rs  prefix.rs  screen.rs  types.rs
(+684 files in other folders)
