[workspace]
members = [".", "panel-model", "panel-runtime", "pan2json", "spf"]

[package]
name = "spf-edit"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
unicode-width = "0.2"
log = "0.4"
simplelog = "0.12"
trace = "0.1.7"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
panel-model = { path = "panel-model" }
panel-runtime = { path = "panel-runtime" }
