[package]
name = "pan2json"
version = "0.1.0"
edition = "2021"
description = "Converts SPFPC .PAN panel files to structured JSON"

[[bin]]
name = "pan2json"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
glob = "0.3"
encoding_rs = "0.8"
panel-model = { path = "../panel-model" }
