[package]
name = "panel-runtime"
version = "0.1.0"
edition = "2021"
description = "Panel display runtime for SPF-Edit panels"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
panel-model = { path = "../panel-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
